# pool-controller

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  Agents.md  CHANGELOG.md  CPPLINT.cfg  LICENSE  Makefile  Pool-Control.fzz  README.md  README_micropython.md  boot.py  config.json  main.py  mkdocs.yml  platformio.ini  pyproject.toml
.github/: CODING_GUIDELINES.md  FUNDING.yml  LINTER_FIX_SUMMARY.md  QUICK_REFERENCE.md  copilot-instructions.m
.github/instructions/: *.instructions.md  ci.instructions.md  docs.instructions.md  tests.instructions.md
.github/linters/: .markdown-lint.yml  .super-linter.yml  .yaml-lint.yml  README.md
.github/workflows/: clang.yml  codeql-analysis.yml  hardware-test.yml  linter.yml  micropython-ci.yml  notify-website-doc.yml  plaform.io.yml
data/homie/: config.json
deprecated/: RCSwitchNode.hpp
docs/: _config.yml  _index.de.md  _index.md  build-fix.md  edge-case-analysis-summary-de.md  edge-case-analysis.md  hardware-guide.md  index.md  mqtt-configuration.md  optimierungen-de.md  optimization-report.md  ota-updates.md  pool-controller.fzz  software-guide.md  state-persistence.md  summary-de.md  summary.md  temperature-based-filtration.md  users-guide.md
docs/en/: _index.md  hardware-guide.md  index.md  software-guide.md  users-guide.md
lib/: ESP32PWM.h  __init__.py  config_manager.py  logger.py  mqtt_client.py  operation_mode.py  relay_module.py  rules.py  temperature_sensor.py  wifi_manager.py
lib/Vector/: README.md  Vector.h  keywords.txt
lib/Vector/examples/BasicUseage/: BasicUseage.ino
scripts/: pre-commit.sh
src/: Config.hpp  ConstantValues.hpp  CurrentValue.cpp  CurrentValue.hpp  DS18B20TemperatureNode.cpp  DS18B20TemperatureNode.hpp  DallasTemperatureNode.cpp  DallasTemperatureNode.hpp  ESP32TemperatureNode.cpp  ESP32TemperatureNode.hpp  HomeAssistantMQTT.cpp  HomeAssistantMQTT.hpp  LoggerNode.cpp  LoggerNode.hpp  MQTTConfig.hpp  MqttInterface.hpp  OperationModeNode.cpp  OperationModeNode.hpp  OperationStatusNode.cpp  OperationStatusNode.hpp  PoolController.cpp  PoolController.hpp  RCSwitchNode.cpp  RCSwitchNode.hpp  RelayModuleNode.cpp  RelayModuleNode.hpp  Rule.hpp  RuleAuto.cpp  RuleAuto.hpp  RuleBoost.cpp  RuleBoost.hpp  RuleManu.cpp  RuleManu.hpp  RuleTimer.cpp  RuleTimer.hpp  StateManager.hpp  SystemMonitor.cpp  SystemMonitor.hpp  TimeClientHelper.cpp  TimeClientHelper.hpp  (+8 more)
src/Nodes/: Logger.cpp  Logger.hpp
src/deprecated/: RCSwitchNode.cpp  RCSwitchNode.hpp
tests/: __init__.py  conftest.py
tests/hardware/: test_hardware_simulation.py
tests/integration/: test_mqtt.py
tests/unit/: test_config_manager.py  test_relay_module.py  test_rules.py  test_temperature_sensor.py
(+1 files in other folders)
